# crow

./: .editorconfig  .gitignore  Cargo.toml  README.md  package.json  tsconfig.json
backend/: README.md
data-source/: Cargo.toml
data-source/src/: main.rs
mock/: Cargo.toml  README.md  build.rs
mock/src/: main.rs
proto/: Cargo.toml  README.md  build.rs  crow.proto
proto/src/: lib.rs
server/: .env.example  Cargo.toml  README.md
server/src/: channels.rs  curve.rs  curve_service.rs  main.rs  mock.rs
server/src/channels/: curvature_splines.rs  mock.rs  mod.rs  ws_channel.rs
src/: index.html  index.ts
web/: .editorconfig  .env-example  README.md  package-lock.json  package.json  tsconfig.json
web/src/: config.ts  curve.ts  geometry-spline.html  image.ts  index.html  index.ts  line.ts  real.ts  request.ts  tube.ts
web/src/helper/: axes.ts  grid.ts
web/src/style/: main.css
web/src/types/three-transformcontrols/: index.d.ts
