[package]
name = "data-source"
version = "0.1.0"
authors = ["Hexilee <hexileee@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tonic = { version = "0.1", features = ["tls"] }
tokio = { version = "0.2", features = ["full"] }
futures = "0.3"
proto = { path = "../proto" }