[package]
name = "crow-mock"
version = "0.1.0"
authors = ["Hexilee <i@hexilee.me>"]
edition = "2018"
publish = false
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tonic = { version = "0.1.0-alpha.6", features = ["tls"] }
bytes = "0.4"
prost = "0.5"
tokio = { version = "=0.2.0-alpha.6" }
futures-core-preview = "=0.3.0-alpha.19"
futures-util-preview = "=0.3.0-alpha.19"
[build-dependencies]
tonic-build = "0.1.0-alpha.6"