[package]
name = "proto"
version = "0.1.0"
authors = ["Hexilee <i@hexilee.me>"]
edition = "2018"
publish = false
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tonic = "0.1.0-alpha.6"
prost = "0.5"
bytes = "0.4"

[build-dependencies]
tonic-build = "0.1.0-alpha.6"