[package]
name = "server"
version = "0.1.0"
authors = ["Hexilee <i@hexilee.me>"]
edition = "2018"
publish = false
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tonic = { version = "0.1.0-alpha.6", features = ["tls"] }
tokio = { version = "=0.2.0-alpha.6" }
futures-core-preview = "=0.3.0-alpha.19"
futures-util-preview = "=0.3.0-alpha.19"
proto = { path = "../proto" }
aljabar = "0.4"
nalgebra = "0.19"
num = "0.2"

[dev-dependencies]
pprof = { version = "0.3", features = ["flamegraph"] }